--- a/Chinese/大话西游.md
+++ b/Chinese/大话西游.md
@@ -163,3 +163,5 @@
 [Js不可告人的秘密](Javascript/js.md)
 
 [wow](wow/wow.md)
+
+这个游戏让我想起了“你喊破喉咙也不会有人来救你的”“破喉咙！破喉咙！”（我们真的要git clone整个create-your-own-adventure才能建立自己的文件夹吗？）
