--- a/Chinese/20170117/20170117.md
+++ b/Chinese/20170117/20170117.md
@@ -1,2 +1,2 @@
 zhizunbao hui jia guo nian le!
-[Kobe](https://www.baidu.com/s?tn=80035161_2_dg&wd=kobe)
+[GitHub](https://github.com/CPAN-PRC/resources/wiki/My-first-Pull-Request)
