--- a/Chinese/20170117/20170117.md
+++ b/Chinese/20170117/20170117.md
@@ -1,2 +1,2 @@
 zhizunbao hui jia guo nian le!
-[GitHub](https://github.com/CPAN-PRC/resources/wiki/My-first-Pull-Request)
+[shaonian](http://book.zongheng.com/chapter/547156/18555755.html)
