--- a/Chinese/大话西游.md
+++ b/Chinese/大话西游.md
@@ -150,7 +150,7 @@
 
 [歪神现世](waishen/waishen_story.md)
 
-[你以为可以点？] 
+[你以为可以点？]
 
 [吃饼干遐想](lotus/吃饼干遐想.md)
 
@@ -165,3 +165,5 @@
 [wow](wow/wow.md)
 
 [天河他娘](seever/天河他娘.md)
+
+[达康书记](in_name_of_people/darkcom.md)
