fix a typo problem

--- a/Chinese/大话西游.md
+++ b/Chinese/大话西游.md
@@ -2,7 +2,7 @@
 
 前端攻城狮一枚。这枚攻城狮做出了很多网页，比如：
 
-[出门遇到大花的研究生生活](happy_life_with_letty/first_meet.md）
+[出门遇到大花的研究生生活](happy_life_with_letty/first_meet.md)
 
 [星際丹哥接龍](theforce/theforce.md)
 
