Modify path to the file

--- a/Chinese/大话西游.md
+++ b/Chinese/大话西游.md
@@ -2,7 +2,7 @@
 
 前端攻城狮一枚。这枚攻城狮做出了很多网页，比如：
 
-[母鸭带小鸭](Duck_with_ducklings)
+[母鸭带小鸭](Duck_with_ducklings/Duck_with_ducklings.md)
 
 [星際丹哥接龍](theforce/theforce.md)
 
