添加关于数学的名言

--- a/Chinese/DataScientist/数据科学家是啥.md
+++ b/Chinese/DataScientist/数据科学家是啥.md
@@ -1,2 +1,4 @@
 孙悟空想，我本是花果山大王，如今却为了生计做了搞数据的程序员。
 要是早500年，我可是那逍遥自在的[美猴王](../大话西游.md)
+
+“若人们不相信数学简单，那是因为他们还没意识到生命之复杂。”   --[约翰冯诺依曼](https://zh.wikipedia.org/wiki/%E7%BA%A6%E7%BF%B0%C2%B7%E5%86%AF%C2%B7%E8%AF%BA%E4%BC%8A%E6%9B%BC)
