--- a/Chinese/大话西游.md
+++ b/Chinese/大话西游.md
@@ -22,45 +22,45 @@
 
 [recipe](Peter/Peter.md)
 
-[国际大盗](CrazyStone/CrazyStone.md) ?
+[国际大盗](CrazyStone/CrazyStone.md) 
 
-[Casey](Casey/Casey.md) ?
+[Casey](Casey/Casey.md) 
 
-[YW](YW/yw.md) ?
+[YW](YW/yw.md) 
 
-[Nick](NickLuo/nick.md) ?
+[Nick](NickLuo/nick.md) 
 
-[至尊宝](ZZB/zzb.md) ?
+[至尊宝](ZZB/zzb.md) 
 
-[老和尚](monk/monk.md)？
+[老和尚](monk/monk.md)
 
-[木下藤吉郎](manNamedMonkey/monkey.md)?
+[木下藤吉郎](manNamedMonkey/monkey.md)
 
-[阿信](mayDay/mayDay.md)?
+[阿信](mayDay/mayDay.md)
 
-[凤姐](Lady/Lady.md)?
+[凤姐](Lady/Lady.md)
 
-[王尼玛](Interstellar/Interstellar.md)?
+[王尼玛](Interstellar/Interstellar.md)
 
 [唐僧](hatetong/hatetong.md)？
 
 [恭喜您](congrats/congrats.md)
 
-[馬英九](YingJeouMa/YingJeouMa.md)?
+[馬英九](YingJeouMa/YingJeouMa.md)
 
 [康师傅](Kong-Shi-foo/Kong-Shi-foo.md)
 
 [灰公主](Cinderella/Cinderella.md)
 
-[校园偶像](school-idols/school-idols.md)?
+[校园偶像](school-idols/school-idols.md)
 
-[Baymax](Baymax/Baymax.md) ?
+[Baymax](Baymax/Baymax.md) 
 
-[周星驰](Zhou/Zhou.md) ?
+[周星驰](Zhou/Zhou.md) 
 
-[小熊维尼](xinwang/xin.md)?
+[小熊维尼](xinwang/xin.md)
 
-[谢霆锋](TingfengXie/TingfengXie.md)?
+[谢霆锋](TingfengXie/TingfengXie.md)
 
 [斗战胜佛](斗战胜佛/斗战胜佛.md)
 
@@ -68,7 +68,7 @@
 
 [jubeater](ZTL/无天.md)
 
-[heishanlaoyao](heishanlaoyao/heishanlaoyao.md)?
+[heishanlaoyao](heishanlaoyao/heishanlaoyao.md)
 
 [Michael](Michael/signal.md)
 
