--- a/Chinese/大话西游.md
+++ b/Chinese/大话西游.md
@@ -1,4 +1,4 @@
-在1994年大话西游之月光宝盒的电影中，主角周星驰饰演的孙悟空在500年后转世成为：
+你知道吗？在1994年大话西游之月光宝盒的电影中，主角周星驰饰演的孙悟空在500年后转世成为：
 
 前端攻城狮一枚。这枚攻城狮做出了很多网页，比如：
 
@@ -150,7 +150,7 @@
 
 [歪神现世](waishen/waishen_story.md)
 
-[你以为可以点？] 
+[你以为可以点？]
 
 [吃饼干遐想](lotus/吃饼干遐想.md)
 
