--- a/Chinese/大话西游.md
+++ b/Chinese/大话西游.md
@@ -2,6 +2,8 @@
 
 前端攻城狮一枚。这枚攻城狮做出了很多网页，比如：
 
+Click [casey](https://github.com/HQ-XX9/create-your-own-adventure/blob/huangqi/Chinese/casey/casey.md)
+
 [星際丹哥接龍](theforce/theforce.md)
 
 [哟哟切克闹](yoyo/yoyo.md)
