测试添加我的故事进入目录

--- a/Chinese/大话西游.md
+++ b/Chinese/大话西游.md
@@ -165,3 +165,5 @@
 [wow](wow/wow.md)
 
 [天河他娘](seever/天河他娘.md)
+
+[github](https://github.com/ayufish/create-your-own-adventure/blob/master/Chinese/ayufish/github.md)
